# qht-sdk-library

./: CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  react-native-qht-sdk-library.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/qhtsdklibrary/: QhtSdkLibraryModule.kt  QhtSdkLibraryPackage.kt
cpp/: react-native-qht-sdk-library.cpp  react-native-qht-sdk-library.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/qhtsdklibrary/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/QhtSdkLibraryExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/QhtSdkLibraryExample.xcodeproj/: project.pbxproj
example/ios/QhtSdkLibraryExample.xcodeproj/xcshareddata/xcschemes/: QhtSdkLibraryExample.xcscheme
example/ios/QhtSdkLibraryExampleTests/: QhtSdkLibraryExampleTests.m
example/src/: App.tsx
ios/: QhtSdkLibrary.h  QhtSdkLibrary.mm
src/: CustomButton.tsx  index.tsx
